      Thanks to Joe Ingersoll
    - Fixed User authenticated if not in MySQL database <https://rt.cpan.org/Ticket/Display.html?id=62470>
      Thanks to Keith Lawson
    - Fixed Login.pl example - syntax error <https://rt.cpan.org/Public/Bug/Display.html?id=62487>
      (also moved from eg/public-pl/login.pl to eg/bin/login.pl)
      Thanks to William McKee http://search.cpan.org/~wmckee/

2.05 - Thu May 14 18:37:07 PDT 2009
       - Fixed bug in _get_cipher_type() where it was not memoizing the
         Crypt::CBC objects.
       - Fixed https://rt.cpan.org/Ticket/Display.html?id=45207
         Hash keys for configuration values were wrong in several places.
       - Improved test coverage a little.
       
2.04 - Fri Nov 28 15:41:33 PST 2008
       Incorporated bug fix for authen_ses_key() provided by
       Carl Gustafsson. authen_ses_key() was not properly handling
       any extra_session_info - the fix is to get $hashed_string with
          my $hashed_string = pop @rest;

       Also releasing the work done between April 26, 2005 and February 4, 2007,
       plus bug fix for authen_ses_key
       - Added basic framework for unit tests.
       - Factored out some of the DBI code into new methods:
         - _dbi_connect()
         - _get_crypted_password()

       - Changes to satisfy Perl::Critic, e.g.
         - Removed function prototypes (they are ignored for methods.)
         - Cleaned up regular expressions: use /x, etc.

2.03 - Mon Apr 25 10:01:04 PDT 2005
       Incorporated Lance P Cleveland's changes porting module to mod_perl 1.999_22
       (That is, Version 2.0.0-RC5 - April 14, 2005)
       Mainly involves changing almost all references to Apache:: to Apache2::
       
       Also some minor documentation changes.


2.02 - Tue Apr 12 17:58:40 PDT 2005
       Minor documentation fix. Noted that SecretKeyFile has been
       replaced by SecretKey.
       

2.0.1 - Fixed bug in  group()
  It was expecting the list of groups to be already split up.